# embedded_python_interpreter_example

./: .gitignore  README.md  requirements.txt
python_module/: py_swe_interface.py  python_functions.py
src/: CMakeLists.txt  main.cpp
